--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             </p>
         
         </div>
+	<div class= "benefício">
+		<h3 class= "título-centralizado">
+			Benefício 
+		</h3>
+	</div>
     </body>
 </html>
