--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		<h3 class= "título-centralizado">
 			Benefício 
 		</h3>
-	</div>
+        <ul>
+            <li class="itenis">Atendimento aos Clientes</li>
+            <li class="itenis">Espaço diferenciado</li>
+            <li class="itens">Profissionais Qualificados</li>
+        </ul>
+	   </div>
     </body>
 </html>
