--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </p>
         
         </div>
-	<div class= "benefício">
+	<div class= "benefícios">
 		<h3 class= "título-centralizado">
-			Benefício 
+			benefícios 
 		</h3>
         <ul>
             <li class="itenis">Atendimento aos Clientes</li>
