--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
          <ul>
             <li class="itenis">Atendimento aos Clientes</li>
             <li class="itenis">Espaço diferenciado</li>
+            <li class="itens"> Localização</li>
             <li class="itens">Profissionais Qualificados</li>
          </ul>
 	   </div>
