--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
             </p>
             <p id="missao">
                 <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade 
-                    de vida aos clientes"</strong>.</em>
-            </p>
-            <p>
-                Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui 
-                padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
-            </p>
+                    de vida aos clientes"</strong>.</em></p>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui 
+                padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
         
         </div>
 	    <div class= "benefícios">
