--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <img id="banner" src="banner.jpg">
         <div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-            <p>
-                Localizada no coração da cidade a <strong>Barbearia Alura</strong> 
+            <p> Localizada no coração da cidade a <strong>Barbearia Alura</strong> 
                 traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019,
-                 a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
-            </p>
+                 a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia. </p>
             <p id="missao">
                 <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade 
                     de vida aos clientes"</strong>.</em></p>
@@ -35,6 +33,7 @@
             <li class="itens"> Localização</li>
             <li class="itens">Profissionais Qualificados</li>
          </ul>
+         <img src="benefícios.jpg" class="imagembenefícios"
 	   </div>
     </body>
 </html>
