--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li class="itens"> Localização</li>
             <li class="itens">Profissionais Qualificados</li>
          </ul>
-         
-         <img src="benefícios.jpg" class="imagembenefícios"
+
+         <img src="benefícios.jpg" class="imagembenefícios">
 	   </div>
     </body>
 </html>
