--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li class="itens">Profissionais Qualificados</li>
          </ul>
 
-         <img src="benefícios.jpg" class="imagembenefícios">
+         <img src="beneficios.jpg" class="imagembeneficios">
 	   </div>
     </body>
 </html>
